processed/jira/txt/LU/LU-18822.txt
Key:        LU-18822
Summary:    fix symbol redeclaration error in ksocknal_lib_recv_kiov()
Link:       https://jira.whamcloud.com/browse/LU-18822
Type:       Bug
Priority:   Minor
Status:     Resolved
Resolution: Fixed
Assignee:   Jian Yu
Reporter:   Jian Yu
Created:    Mon, 17 Mar 2025 18:04:37 +0000
Updated:    Thu, 3 Apr 2025 12:28:18 +0000
Resolved:   Thu, 3 Apr 2025 12:28:18 +0000

--- Description ---
Distro: Debian 12

Kernel: 6.1.0-32-686-pae

Gcc: 12.2

lnet/klnds/socklnd/socklnd_lib.c: In function 'ksocknal_lib_recv_kiov':
lnet/klnds/socklnd/socklnd_lib.c:314:23: error: 'scratchiov' redeclared as different kind of symbol
  314 |         struct kvec  *scratchiov = &scratch;
      |                       ^~~~~~~~~~
lnet/klnds/socklnd/socklnd_lib.c:310:37: note: previous definition of 'scratchiov' with type 'struct kvec *'
  310 |                        struct kvec *scratchiov)
      |                        ~~~~~~~~~~~~~^~~~~~~~~~
lnet/klnds/socklnd/socklnd_lib.c:315:24: error: 'pages' redeclared as different kind of symbol
  315 |         struct page  **pages      = NULL;
      |                        ^~~~~
lnet/klnds/socklnd/socklnd_lib.c:309:63: note: previous definition of 'pages' with type 'struct page **'
  309 | ksocknal_lib_recv_kiov(struct ksock_conn *conn, struct page **pages,
      |                                                 ~~~~~~~~~~~~~~^~~~~

--- Comment (pjones, Thu, 3 Apr 2025 12:28:18 +0000) ---
Merged for 2.17

--- Comment (gerrit, Wed, 26 Mar 2025 04:06:42 +0000) ---
"Oleg Drokin " merged in patch https://review.whamcloud.com/c/fs/lustre-release/+/58441/

Subject: LU-18822 build: fix symbol redeclaration error in socklnd_lib.c

Project: fs/lustre-release

Branch: master

Current Patch Set: 

Commit: 36dced9600a0019260e2becee1e39e797c65d417

--- Comment (gerrit, Mon, 17 Mar 2025 18:35:45 +0000) ---
"Jian Yu " uploaded a new patch: https://review.whamcloud.com/c/fs/lustre-release/+/58441

Subject: LU-18822 build: fix symbol redeclaration error in socklnd_lib.c

Project: fs/lustre-release

Branch: master

Current Patch Set: 1

Commit: 4dfa354ef2d87896d0230d8e020493ebd9ea34ac
